--- a/pompouspanda/templates/blog/index.html
+++ b/pompouspanda/templates/blog/index.html
@@ -8,7 +8,7 @@
 	{% for post in posts %}
 		<div class="post">
 			<h1>
-				<a href="{{post.get_absolute_url}}">
+				<a href="{{post.slug}}">
 					{{post.title}}
 				</a>
 			</h1>
