--- a/pompouspanda/templates/blog/index.html
+++ b/pompouspanda/templates/blog/index.html
@@ -8,20 +8,19 @@
 	{% for post in posts %}
 		<div class="post">
 			<h1>
-				<a href="{{post.slug}}">
+				<a href="{{post.get_absolute_url}}">
 					{{post.title}}
 				</a>
 			</h1>
-			<p>{{post.get_absolute_url}}</p>
-			<p>
-				{{post.description}}
-			</p>
 			<div class="post-footer">
 				Posted on 
 				<time datetime="{{post.created|date:"c"}}">
 					{{post.created|date}}
 				</time>
 			</div>
+			<p>
+				{{post.description}}
+			</p>
 		</div>
 	{% endfor %}
 	</section>
