fixed static files

--- a/pompouspanda/templates/blog/base.html
+++ b/pompouspanda/templates/blog/base.html
@@ -12,11 +12,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	
+	{% load staticfiles %}
 	<!-- Replace favicon.ico & apple-touch-icon.png in the root of your 
 		domain and delete these references -->
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-	<link rel="stylesheet" href="{{STATIC_URL}}style.css">
+	<link rel="stylesheet" href="{% static "style.css" %}">
 </head>
 
 <body>
