--- a/pompouspanda/static/style.css
+++ b/pompouspanda/static/style.css
@@ -7,11 +7,31 @@ body{
 	line-height: 28px;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+.wrap {
+    width: 975px;
+    margin: 0 auto;
+    padding:0;
+}
+header h1 {
+    background-color: blue;
+    width:100%;
+}
 div.content{
-	border: 1px solid #fbfbfb;
 	background-color: #fff;
-	max-width: 640px;
-	width: 96%;
-	padding: 2%;
-	margin: 28px  auto;
+	width: 70%;
+	padding: 0;
+	margin: 0;
+	float: left;
+	background-color: green;
+}
+aside {
+    width: 30%;
+    margin: 0;
+    padding: 0;
+    float:left;
+    background-color: purple;
+}
+footer {
+    clear: both;
+    width: 100%;
 }
