--- a/pompouspanda/templates/blog/base.html
+++ b/pompouspanda/templates/blog/base.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-	<header class="blog-header">
+    <div class="wrap">
+        
+    <header class="blog-header">
 		<h1>Welcome to my blog</h1>
 		<nav>
 			<p><a href="/">Home</a></p>
@@ -40,5 +42,6 @@
 			&copy; Copyright  by Jacob Hooey
 		</p>
 	</footer>
+    </div>
 </body>
 </html>
