--- a/pompouspanda/templates/blog/base.html
+++ b/pompouspanda/templates/blog/base.html
@@ -17,6 +17,7 @@
 		domain and delete these references -->
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="stylesheet" href="{% static "normalize.css" %}">
 	<link rel="stylesheet" href="{% static "style.css" %}">
 </head>
 
