--- a/pompouspanda/templates/blog/base.html
+++ b/pompouspanda/templates/blog/base.html
@@ -27,8 +27,8 @@
     <header class="blog-header">
 		<h1>Welcome to my blog</h1>
 		<nav>
-			<p><a href="/">Home</a></p>
-			<p><a href="/contact">Contact</a></p>
+			<a href="/">Home</a>
+			<a href="/contact">Contact</a>
 		</nav>
 	</header>
 	<div class="content">
