--- a/pompouspanda/static/style.css
+++ b/pompouspanda/static/style.css
@@ -12,24 +12,28 @@ body{
     margin: 0 auto;
     padding:0;
 }
-header h1 {
-    background-color: blue;
+header {
     width:100%;
 }
+nav {
+    width:100%;
+}
+nav a {
+    width: 25%;
+    text-align:center;
+    display:inline-block;
+}
 div.content{
-	background-color: #fff;
 	width: 70%;
 	padding: 0;
 	margin: 0;
 	float: left;
-	background-color: green;
 }
 aside {
     width: 30%;
     margin: 0;
     padding: 0;
     float:left;
-    background-color: purple;
 }
 footer {
     clear: both;
