--- a/pompouspanda/templates/blog/base.html
+++ b/pompouspanda/templates/blog/base.html
@@ -25,7 +25,7 @@
     <div class="wrap">
         
     <header class="blog-header">
-		<h1>Welcome to my blog</h1>
+		<h1>Pompous Panda</h1>
 		<nav>
 			<a href="/">Home</a>
 			<a href="/contact">Contact</a>
